[workspace]
resolver = "2"
members = [
    "generated/pricing-programs/*",
    "generated/s_controller_interface",
    "generated/sol-value-calculator-programs/*",
    "keys/*",
    "libs/pricing-programs/*",
    "libs/s-controller-lib",
    "libs/sanctum-onchain-utils",
    "libs/sanctum-token-ratio",
    "libs/sanctum-utils",
    "libs/sol-value-calculator-programs/*",
    "programs/pricing-programs/*",
    "programs/s-controller",
    "programs/sol-value-calculator-programs/*",
    "test-utils",
]

[workspace.dependencies]
bincode = "^1"
borsh = ">=0.9"
bytemuck = "^1"
num-derive = ">=0.3"
num-traits = ">=0.2"
proptest = "^1"
sanctum-macros = "^1"
serde = "^1"
serde_json = "^1"
spl-pod = ">=0.1.0"
spl-token = ">=0.1.0"
spl-token-2022 = ">=0.1.0"
spl-token-metadata-interface = ">=0.1.0"
spl-associated-token-account = ">=0.1.0"
static_assertions = "^1"
thiserror = "^1"
tokio = "^1"

# DO NOT ENABLE `features = ["solana-sdk"]` HERE OR ELSE IT'LL MAKE ALL ONCHAIN PROGRAMS UNCOMPILABLE
# CLIENT CRATES SHOULD ENABLE IT SEPARATELY
solana-readonly-account = "^1"

# solana libraries (not pure rust)
# Use ^1 for flexibility for library users, but lock to 1.16.20 for deploy
solana-account-decoder = "^1"
solana-program = "^1"
solana-program-test = "^1"
solana-sdk = "^1"
