[workspace]
resolver = "2"
members = [
    "generated/pricing-programs/*",
    "generated/s_controller_interface",
    "generated/sol-value-calculator-programs/*",
    "keys/*",
    "libs/pricing-programs/*",
    "libs/s-controller-lib",
    "libs/sanctum-onchain-utils",
    "libs/sanctum-utils",
    "libs/sol-value-calculator-programs/*",
    "programs/pricing-programs/*",
    "programs/s-controller",
    "programs/sol-value-calculator-programs/*",
    "test-utils",
]

#[profile.release]
#overflow-checks = true # increases binary size, we're using checked ops everywhere
#lto = "fat" # doesn't affect binary size
#panic = "abort" # cargo-build-sbf does this
#strip = true # cargo-build-sbf strips symbols after building

[workspace.dependencies]
bincode = "^1"
borsh = ">=0.9"
bytemuck = "^1"
num-derive = ">=0.3"
num-traits = ">=0.2"
proptest = "^1"
sanctum-macros = "^1"
sanctum-misc-utils = { git = "https://github.com/igneous-labs/sanctum-solana-utils.git", rev = "064163d" } 
sanctum-token-ratio = { git = "https://github.com/igneous-labs/sanctum-solana-utils.git", rev = "064163d", features = ["borsh", "onchain"] } 
serde = "^1"
serde_json = "^1"
spl-pod = ">=0.1.0"
spl-token = ">=0.1.0"
spl-token-2022 = ">=0.1.0"
spl-token-metadata-interface = ">=0.1.0"
spl-associated-token-account = ">=0.1.0"
static_assertions = "^1"
thiserror = "^1"
tokio = "^1"

# DO NOT ENABLE `features = ["solana-sdk"]` HERE OR ELSE IT'LL MAKE ALL ONCHAIN PROGRAMS UNCOMPILABLE
# CLIENT CRATES SHOULD ENABLE IT SEPARATELY
solana-readonly-account = "^1"

# solana libraries (not pure rust)
# Use ^1 for flexibility for library users, but lock to 1.16.20 for deploy
solana-account-decoder = "^1"
solana-program = "^1"
solana-program-test = "^1"
solana-sdk = "^1"

# workspace members
flat_fee_interface = { path = "./generated/pricing-programs/flat_fee_interface" }
pricing_programs_interface = { path = "./generated/pricing-programs/pricing_programs_interface" }
s_controller_interface = { path = "./generated/s_controller_interface" }
generic_pool_calculator_interface = { path = "./generated/sol-value-calculator-programs/generic_pool_calculator_interface" }
lido_calculator_interface = { path = "./generated/sol-value-calculator-programs/lido_calculator_interface" }
marinade_calculator_interface = { path = "./generated/sol-value-calculator-programs/marinade_calculator_interface" }
sol_value_calculator_interface = { path = "./generated/sol-value-calculator-programs/sol_value_calculator_interface" }
spl_calculator_interface = { path = "./generated/sol-value-calculator-programs/spl_calculator_interface" }
wsol_calculator_interface = { path = "./generated/sol-value-calculator-programs/wsol_calculator_interface" }
lido-keys = { path = "./keys/lido-keys" }
marinade-keys = { path = "./keys/marinade-keys" }
spl-stake-pool-keys = { path = "./keys/spl-stake-pool-keys" }
wsol-keys = { path = "./keys/wsol-keys" }
flat-fee-lib = { path = "./libs/pricing-programs/flat-fee-lib" }
flat-fee-test-utils = { path = "./libs/pricing-programs/flat-fee-test-utils" }
s-controller-lib = { path = "./libs/s-controller-lib" }
sanctum-onchain-utils = { path = "./libs/sanctum-onchain-utils" }
sanctum-utils = { path = "./libs/sanctum-utils" }
generic-pool-calculator-lib = { path = "./libs/sol-value-calculator-programs/generic-pool-calculator-lib" }
generic-pool-calculator-onchain = { path = "./libs/sol-value-calculator-programs/generic-pool-calculator-onchain" }
generic-pool-calculator-test-utils = { path = "./libs/sol-value-calculator-programs/generic-pool-calculator-test-utils" }
lido-calculator-lib = { path = "./libs/sol-value-calculator-programs/lido-calculator-lib" }
marinade-calculator-lib = { path = "./libs/sol-value-calculator-programs/marinade-calculator-lib" }
sol-value-calculator-lib = { path = "./libs/sol-value-calculator-programs/sol-value-calculator-lib" }
sol-value-calculator-onchain = { path = "./libs/sol-value-calculator-programs/sol-value-calculator-onchain" }
spl-calculator-lib = { path = "./libs/sol-value-calculator-programs/spl-calculator-lib" }
wsol-calculator-lib = { path = "./libs/sol-value-calculator-programs/wsol-calculator-lib" }
flat-fee = { path = "./programs/pricing-programs/flat-fee" }
no-fee-pricing-program = { path = "./programs/pricing-programs/no-fee-pricing-program" }
s-controller = { path = "./programs/s-controller" }
lido-calculator = { path = "./programs/sol-value-calculator-programs/lido-calculator" }
marinade-calculator = { path = "./programs/sol-value-calculator-programs/marinade-calculator" }
spl-calculator = { path = "./programs/sol-value-calculator-programs/spl-calculator" }
wsol-calculator = { path = "./programs/sol-value-calculator-programs/wsol-calculator" }
test-utils = { path = "./test-utils" }
