[package]
name = "socean-migration"
version = "0.1.0"
edition = "2021"

[features]
testing = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
clap = { workspace = true }
mpl-token-metadata = { workspace = true }
s_controller_interface = { workspace = true }
s-controller-lib = { workspace = true }
sanctum-associated-token-lib = { workspace = true }
sanctum-macros = { workspace = true }
sanctum-misc-utils = { workspace = true }
sanctum-solana-cli-utils = { workspace = true }
sanctum-system-program-lib = { workspace = true }
sanctum-token-lib = { workspace = true }
solana-program = { workspace = true }
spl-calculator-lib = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
stake_program_interface = { workspace = true }
system_program_interface = { workspace = true }
tokio = { workspace = true }
