[package]
name = "test-utils"
version = "1.0.0"
edition = "2021"

[dependencies]
num-traits = { workspace = true }
proptest = { workspace = true }
sanctum-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder = { workspace = true }
solana-program = { workspace = true }
solana-readonly-account = { workspace = true, features = ["solana-sdk"] }
solana-sdk = { workspace = true }
solana-program-test = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }