[package]
name = "test-utils"
version = "1.0.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
borsh = { workspace = true }
proptest = { workspace = true }
sanctum-macros = { workspace = true }
sanctum-solana-test-utils = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
