[package]
name = "generic-pool-calculator-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gpc"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
generic_pool_calculator_interface = { workspace = true }
generic-pool-calculator-lib = { workspace = true }
sanctum-solana-cli-utils = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
