[package]
name = "s-cli-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
sanctum-macros = { workspace = true }
sanctum-solana-cli-utils = { workspace = true }
sanctum-solana-client-utils = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }