[package]
name = "s-controller-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sctr"
path = "src/main.rs"

[features]
testing = ["s-controller/testing"]

[dependencies]
clap = { workspace = true }
s_controller_interface = { workspace = true }
s-cli-utils = { workspace = true }
s-controller-lib = { workspace = true }
sanctum-solana-cli-utils = { workspace = true }
solana-client = { workspace = true }
solana-readonly-account = { workspace = true, features = ["solana-sdk"]}
solana-sdk = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
assert_cmd = { workspace = true }
cli-test-utils = { workspace = true }
s-controller = { workspace = true }
s-controller-test-utils = { workspace = true }
sanctum-solana-test-utils = { workspace = true, features = ["banks-rpc-server", "cli", "token"] }
solana-program-test = { workspace = true }
