[package]
name = "s-controller-lib"
version = "1.0.0"
edition = "2021"

[features]
testing = []

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
s_controller_interface = { path = "../../generated/s_controller_interface" }
sanctum-macros = { workspace = true }
sanctum-utils = { path = "../sanctum-utils" }
solana-program = { workspace = true }
solana-readonly-account = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
static_assertions = { workspace = true }
