[package]
name = "sanctum-onchain-utils"
version = "1.0.0"
edition = "2021"

[dependencies]
sanctum-utils = { workspace = true }
solana-program = { workspace = true }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-token-metadata-interface = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }