[package]
name = "sanctum-token-ratio"
version = "1.0.0"
edition = "2021"

[features]
onchain = ["solana-program", "num-traits"]

[dependencies]
num-traits = { workspace = true, optional = true }
solana-program = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
test-utils = { path = "../../test-utils" }
